--- a/data_splitter.ipynb
+++ b/data_splitter.ipynb
@@ -73,15 +73,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0, processing month: 1, timestamp: Thu Oct 29 02:42:29 2020\n",
-      "1, processing month: 1, timestamp: Thu Oct 29 02:42:56 2020\n",
-      "2, processing month: 2, timestamp: Thu Oct 29 02:43:23 2020\n",
-      "3, processing month: 3, timestamp: Thu Oct 29 02:43:50 2020\n",
-      "4, processing month: 3, timestamp: Thu Oct 29 02:44:28 2020\n",
-      "5, processing month: 4, timestamp: Thu Oct 29 02:45:08 2020\n",
-      "6, processing month: 5, timestamp: Thu Oct 29 02:45:38 2020\n",
-      "7, processing month: 6, timestamp: Thu Oct 29 02:46:08 2020\n",
-      "8, processing month: 7, timestamp: Thu Oct 29 02:46:39 2020\n"
+      "0, processing month: 1, timestamp: Thu Nov  5 17:24:56 2020\n",
+      "1, processing month: 1, timestamp: Thu Nov  5 17:26:07 2020\n",
+      "2, processing month: 2, timestamp: Thu Nov  5 17:27:19 2020\n",
+      "3, processing month: 3, timestamp: Thu Nov  5 17:28:25 2020\n",
+      "4, processing month: 3, timestamp: Thu Nov  5 17:29:29 2020\n",
+      "5, processing month: 4, timestamp: Thu Nov  5 17:30:34 2020\n",
+      "6, processing month: 5, timestamp: Thu Nov  5 17:31:40 2020\n",
+      "7, processing month: 6, timestamp: Thu Nov  5 17:32:47 2020\n",
+      "8, processing month: 7, timestamp: Thu Nov  5 17:33:51 2020\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
     "csv_names = [\"EMS_2020_\" + str(month) + \".csv\" for month in range(1, 13)]\n",
     "files = [open(csv_name, \"w\", newline='') for csv_name in csv_names] \n",
     "ios = [csv.writer(file) for file in files]\n",
-    "filename = \"EMS_2020.csv\"\n",
+    "filename = \"data/EMS_2020.csv\"\n",
     "chunksize = 10 ** 3\n",
     "\n",
     "# write headers\n",
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
